public/main.css
/* ... */
/* btn prev/next */

.btn-prev,
.btn-next {
  width: 2rem;
  height: 2rem;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  cursor: pointer;
  transition: var(--transition);
}

.btn-prev:hover,
.btn-next:hover {
  background: var(--secondary-700);
  color: var(--secondary-300);
}

.btn-prev {
  left: 25px;
  border-radius: 50%;
  border: 0;
  background: var(--secondary-500);
  color: var(--primary-500);
}

.btn-next {
  right: 25px;
  border-radius: 50%;
  border: 0;
  background: var(--secondary-500);
  color: var(--primary-500);
}

/* @media (max-width: 992px) {
  .open-container {
    height: 55vh;
  }
}

@media (max-width: 678px) {
  .open-container {
    height: 40vh;
  }
}

@media (max-width: 525px) {
  .open-container {
    height: 25vh;
  }

  .btn-prev,
  .btn-next {
    width: 1.25rem;
    height: 1.25rem;
    font-size: 0.75rem;
  }
} */

/* media queries */

@media screen and (max-width: 375px) {
  .details-container div {
    flex: 0 1 12rem;
  }

  .galeria-container img {
    height: 15rem;
  }

  .open-container {
    height: 15rem;
  }
}

@media screen and (min-width: 376px) {
  .open-container {
    height: calc(100% - (40vh + 30vh));
  }
}

@media screen and (max-width: 476px) {
  .details-container div {
    flex: 0 1 14rem;
  }

  .btn-prev,
  .btn-next {
    width: 1.25rem;
    height: 1.25rem;
    font-size: 0.75rem;
  }
}

@media screen and (min-width: 596px) {
  .services-container {
    flex-flow: column;
  }

  .details {
    max-width: 550px;
  }

  .details-container div {
    flex: 0 1 12rem;
  }

  .card-container {
    justify-content: center;
    gap: 2rem;
  }

  .card {
    width: 40%;
  }

  .galeria-container {
    grid-template-columns: 1fr 1fr;
    gap: 1rem 1rem;
  }

  .galeria-container img {
    height: 15rem;
  }

  .open-container {
    height: calc(100% - (20vh + 30vh));
    /* height: 55vh; */
  }
}

@media screen and (min-width: 890px) {
  .passion {
    flex-flow: column;
  }
}

@media screen and (min-width: 992px) {
  .details-container div {
    flex: 0 1 14rem;
  }

  .card {
    width: 20rem;
  }

  .galeria-container {
    grid-template-columns: 1fr 1fr 1fr;
  }

  .galeria-container img {
    height: 12rem;
  }

  .open-container {
    height: calc(100% - 30vh);
  }
}

@media screen and (min-width: 1180px) {
  .details {
    max-width: var(--maxWidth);
  }

  .details-container div {
    flex: 0 1 auto;
    /* padding: 0 3rem; */
  }

  .galeria-container {
    grid-template-columns: 1fr 1fr 1fr 1fr;
  }

  .galeria-container img {
    height: 12rem;
  }
}

@media screen and (min-width: 1340px) {
  .passion {
    display: grid;
    justify-items: center;
    grid-template-columns: 1fr 1fr;
  }

  .passion-container {
    display: flex;
    flex-flow: row wrap;
    align-items: flex-start;
    justify-content: flex-start;
    text-align: left;
  }

  .passion-container * {
    flex: 2 1 auto;
  }

  .passion-container h2 {
    color: var(--primary-500);
  }

  .passion-container p {
    padding-right: 2rem;
    color: var(--primary-500);
  }

  .passion-container .btn {
    flex: 0 1 auto;
  }

  .img-container {
    border-radius: var(--borderRadius);
    box-shadow: var(--shadow-2);
    overflow: hidden;
    width: 35rem;
    margin: 0;
  }

  .open-container {
    height: 80vh;
  }

  /* .details-container div {
    flex: 0 1 14rem;
  } */
}

@media screen and (min-width: 1440px) {
  .card-container {
    flex-flow: row;
  }
}

@media screen and (orientation: landscape) {
  .open-container {
    height: 85vh;
  }
}

/* form */

.span {
  width: var(--maxCharWidth);
  text-transform: none;
  text-align: center;
  color: var(--primary-500);
}

